test/scc/lex/errors/config.py
cmds = ['%test', '-flex-only', '-log', '%output']